[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cellphone/cellphone_map2.png" type="Texture" id=1]
[ext_resource path="res://Cellphone/Map.gd" type="Script" id=2]
[ext_resource path="res://assets/Here.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( 64, 35 )
rotation = -1.5708
script = ExtResource( 2 )

[node name="CellphoneMap2" type="Sprite" parent="."]
position = Vector2( -413.002, 575.999 )
rotation = 1.5708
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -319.703, 804.598 )
rotation = 1.5708
scale = Vector2( 0.07, 0.05 )
texture = ExtResource( 3 )

[node name="Button_exit_map" type="Button" parent="."]
pause_mode = 2
show_behind_parent = true
margin_left = -499.001
margin_top = 250.998
margin_right = -424.001
margin_bottom = 437.998
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_college" type="Button" parent="."]
pause_mode = 2
show_behind_parent = true
margin_left = -312.001
margin_top = 378.999
margin_right = -201.001
margin_bottom = 456.999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_bedroom" type="Button" parent="."]
pause_mode = 2
show_behind_parent = true
margin_left = -296.001
margin_top = 264.999
margin_right = -217.001
margin_bottom = 360.999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_bank" type="Button" parent="."]
pause_mode = 2
show_behind_parent = true
margin_left = -307.002
margin_top = 571.999
margin_right = -194.002
margin_bottom = 660.999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_work" type="Button" parent="."]
pause_mode = 2
show_behind_parent = true
margin_left = -305.002
margin_top = 672.999
margin_right = -195.002
margin_bottom = 773.999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_park" type="Button" parent="."]
pause_mode = 2
show_behind_parent = true
margin_left = -400.003
margin_top = 797.999
margin_right = -234.003
margin_bottom = 898.999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_market" type="Button" parent="."]
pause_mode = 2
show_behind_parent = true
margin_left = -304.889
margin_top = 466.969
margin_right = -228.889
margin_bottom = 560.969
rect_scale = Vector2( 1.14922, 1.02938 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button_exit_map" to="." method="_on_Button_exit_map_pressed"]
[connection signal="pressed" from="Button_college" to="." method="_on_Button_college_pressed"]
[connection signal="pressed" from="Button_bedroom" to="." method="_on_Button_bedroom_pressed"]
[connection signal="pressed" from="Button_bank" to="." method="_on_Button_bank_pressed"]
[connection signal="pressed" from="Button_work" to="." method="_on_Button_work_pressed"]
[connection signal="pressed" from="Button_park" to="." method="_on_Button_park_pressed"]
[connection signal="pressed" from="Button_market" to="." method="_on_Button_market_pressed"]
